--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc && node setup.js",
     "dist": "rm dist -rf && npm run build && cd dist && npm publish",
-    "test:unit": "mocha -b -w --recursive --require ts-node/register --watch-extensions ts \"tests/unit/setup.ts\"",
-    "test:unit:pipeline": "mocha -b --require ts-node/register --watch-extensions ts \"tests/unit/setup.ts\""
+    "test": "mocha -b -w --recursive --require ts-node/register --watch-extensions ts \"tests/setup.ts\"",
+    "test:unit:pipeline": "mocha -b --require ts-node/register --watch-extensions ts \"tests/setup.ts\""
   },
   "author": "Albo Vieira",
   "license": "MIT",
