--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
 version: '3'
 services:
+  elasticsearch:
+    image: 'bitnami/elasticsearch:7'
+    ports:
+      - '9200:9200'
+      - '9300:9300'
+    volumes:
+      - 'elasticsearch_data:/bitnami/elasticsearch/data'
   redis:
     image: 'redis'
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
-      - '6379:6379'
+      - '6378:6379'
+volumes:
+  elasticsearch_data:
+    driver: local
